# homeworks_of_course_6

./: .env_example  README.md  pyproject.toml
config/: settings.py  urls.py
lms/: models.py  paginations.py  serializers.py  tasks.py  tests.py  urls.py  views.py
users/: models.py  permissions.py  serializers.py  services.py  urls.py  views.py
